[package]
name = "walle-nb2"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["abrahumlink"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]

[dependencies.pyo3-asyncio]
version = "0.16"
features = ["tokio-runtime"]

[dependencies.walle-core]
version = "0.6.1"

[dependencies]
async-trait = "*"
tokio = "*"
rmp-serde = "*"
tracing = "*"

[dev-dependencies.tokio]
version = "*"
features = ["full"]

[dev-dependencies.walle-core]
version = "*"
features = ["full"]

[dev-dependencies]
tracing-subscriber = "0.3"
